--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "prettier": "^3.0.1",
     "typescript": "^5.1.6"
   },
   "scripts": {
